--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
 ---
 title: "four-hundred-and-four"
-layout: default
+layout: page
 ---
 
 # Error <yeet>four-hundred-and-four!</yeet>
@@ -9,4 +9,4 @@ What you're looking for could not be found, sadly.
 
 ---
 
-<a href="/" class="button duo">← Back Home</a>
+<a href="/" class="button uno">← Back Home</a>
