--- a/404.md
+++ b/404.md
@@ -5,7 +5,7 @@ layout: page
 
 # Error <yeet>four-hundred-and-four!</yeet>
 
-What you're looking for could not be found, sadly.
+**This page may exist on an older version of my website at <script>document.write(`<a href="https://2019.melody.cool${window.location.pathname}" target="_blank">https://2019.melody.cool${window.location.pathname}</a>`);</script>**
 
 ---
 
