content wip updates

--- a/_posts/2019-03-04-splatoon/2019-03-04-splatoon.md
+++ b/_posts/2019-03-04-splatoon/2019-03-04-splatoon.md
@@ -17,8 +17,44 @@ feature:
 image: meta-preview.png
 ---
 
-Woomy!
+## Outline
 
-Veemo!
+- Intro to Splatoon
+- Watch me live
+- Design jawns
+- Code experiments
+  - OBS overlay
+  - Philiphs hue
+  - Mixer overlay
+- Team history
+  - GSQ
+  - Tuff Puff
+  - HRG
+  - ??
+  
 
-As an avid Splatoon player since who knows. I've joined competitive tournaments
+Splatoon is this really cool game I play that involves splatting other players with ink. I'm proud to be part of a friendly and community that's quite hard to come across, especially in esports.
+
+## I'm on Twitch!
+
+I'm really just here to have a great time, so sit back, stay for a while, and send me some positive vibes! 👋
+
+TODO: 
+
+As part of my setup, I designed a digital graphics package for my stream.
+
+## Code experiments
+
+Yes!
+
+### Philips Hue integration
+
+At the beginning of each match, each team is randomly assigned a color. Using the power of OpenCV, I tossed together a python script that detects your team's color and changes the ambient lighting of the room to match that color!
+
+### OBS Overlays
+
+I worked on an overlay for OBS that displays the current stages. (GitHub @pixelyunicorn/splat-overlay)
+
+### Mixer Overlay
+
+I am currently experimenting with Mixer's overlay system.
