--- a/_posts/2019-03-05-codeday/2019-03-05-codeday.md
+++ b/_posts/2019-03-05-codeday/2019-03-05-codeday.md
@@ -19,38 +19,38 @@ Coding, programming, and computer analytics don’t seem like very sexy careers.
 
 **According to the [Bureau of Labor Statistics](http://www.itworld.com/article/2945674/careers/computer-science-students-are-in-demand-and-they-know-it.html), demand for jobs in STEM fields are expected to rise as much as 25% in the next 5 years.** How do kids and young students, equipped with one-in-a-million aspirations of rock stardom and Hollywood, embrace a profession with great growth rates and quite a bit higher than average income?
 
-**This is [CodeDay Philly](http://codeday.org/philly).** For 24 hours we invite students ranging from middle school through college level, of all experience levels, whether you don’t know anything about programming or you’ve been doing it for several years, to just come, build something cool, whether it’s a game or an app, to meet other programmers in the area and network across the country.
-
-<p><a href="https://codeday.org/philly?wvideo=n6xc4pm90n#"><img src="{{ site.baseurl }}/media/codeday/video.jpg" alt="Play video" ></a></p>
+To solve this problem, I started **CodeDay Philly** For 24 hours we invite students ranging from middle school through college level, of all experience levels, whether you don’t know anything about programming or you’ve been doing it for several years, to just come, build something cool, whether it’s a game or an app, to meet other programmers in the area and network across the country.
 
 ## Impact
 
-Since our first event in Spring 2014, we have had a great impact on the Philadelphia community:
+Since the first event in Spring 2014, CodeDay has had a great impact on the Philadelphia community:
 
 <grid column-count="3" phone-column-count="1">
 	<div class="brick accent-bg">
-		<h2>540+</h2>
+		<h2>600+</h2>
 		<p class="lead">Students reached</p>
 	</div>
 	<div class="brick accent-bg">
-		<h2>180+</h2>
+		<h2>200+</h2>
 		<p class="lead">Amazing projects</p>
 	</div>
 	<div class="brick accent-bg">
-		<h2>90</h2>
+		<h2>90+</h2>
 		<p class="lead">Hours of workshops</p>
 	</div>
 </grid>
 
 ### Low Cost, High Return
 
-CodeDay Philly inspire students with no prior interest in coding. After attending an event, 80% of these students are still pursuing coding three months later.
+CodeDay Philly inspire students with no prior interest in coding. After attending an event, 80% of these students are still pursuing coding three months later. These events cost  less than $30 per student or run.
 
 ### Commitment to Diversity
 
 Overall, 43% of our participants are girls, 38% are from Title I schools, and 21% are from a under-represented ethnic group. At our fall 2017 event, over 60% of our participants identified as female.
 
 ## Photos
+
+TODO: import photos from old site
 
 <blockquote class="text-center">
 	<row>
@@ -67,6 +67,8 @@ Overall, 43% of our participants are girls, 38% are from Title I schools, and 21
 ## Graphics
 
 I worked on some marketing material for CodeDay designed to be shared and re-shared on social media. Here's what it looks like:
+
+TODO: import graphics from old site
 
 <blockquote class="accent-light-bg text-center">
 	<row>
