--- a/_posts/2019-03-01-guru/2019-03-01-guru.md
+++ b/_posts/2019-03-01-guru/2019-03-01-guru.md
@@ -15,6 +15,7 @@ feature:
   height: 9
   image: feature.png
 image: meta-preview.png
+draft: true
 ---
 
 ## One small thing leads to bigger things.
