--- a/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
+++ b/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
@@ -2,11 +2,11 @@
 layout: post
 title: lo-fi hip hop beats to npm install to
 tags: talks
-accent: orange
+accent: purple
 tile:
   order: 99
   width: 10
-  height: 4
+  height: 5
   left: 2
   image: tile.png
 feature:
