🔥 bitconnecttttttt erm i meant bitcampppppp

--- a/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
+++ b/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Bitcamp
-tags: work
+tags: hackathon
 accent: teal
 tile:
   order: 101
@@ -15,4 +15,107 @@ feature:
 image: meta-preview.png
 ---
 
-Bitcamp!
+As part of Bitcamp 2019's Design Den, I designed a bunch of things and helped a bunch of people! Here's what I did over the past 36 hours:
+
+![things i made at bitcamp](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fhello.png?1555223303835)
+
+## Colorwar submission
+
+_"Building with purpose"_ means bringing our unique skills to the table and working together as a team with to achieve a common goal! 🙌
+
+So I illustrated our (s)elves working on a cool website together!
+
+<a href="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcolorwar.png?1555223309858" target="_blank" class="button uno"><img src="https://icon.now.sh/insert_photo" /> View Full Size →</a>
+
+![colorwar submission](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcolorwar.png?1555223309858)
+
+## Soothing FLAME RED lava lamp
+
+_Promopt: Design something soothing using FLAME RED as one of the colors (#FF3F46)._
+
+Red and soothing? I was thinking of something along the lines of a cough drop, lava lamp, or even the interior of [an Virgin America airplane](https://www.google.com/search?tbm=isch&source=hp&q=virgin+america+interior&oq=virgin+america+interior)! I ultimately went with the lava lamp idea.
+
+![lava lamp](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flava%20lamp.png?1555224155862)
+
+## Bitstrict fresh & organic taco sauces
+
+_Prompt: Use bitcamp pixels as part of a luxury product packaging campaign. Alternatively: Design a Bitcamp branded food._
+
+Introducting Bitstrict Taco: a bunch of fresh & organic sauces sold exclusively at Hole Foods. You know it's good because the packaging says the company is as old as the United States!
+
+![tacos](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fbitstrict taco.png?1555224895350)
+
+Here are potential applications for ads, and how the bitcamp pixels are placed in relation to the hotness of the sauce. Basically, for each step the sauce gets hotter, an additional row of pixels is shown.
+
+![ads](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fbitstrict ads.png?1555224895201)
+![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fbitstrict artboards.png?1555224895283)
+
+## Brighten: Improve your mood in 2 minutes!
+
+_Prompt: Design an experience for an app to help you with your mood._
+
+I designed an app that improves your mood with just 2 minutes, with the help of exercises, videos, and mini-games created by experts and suggested by artificial intellegence. (Why 2 minutes? Many users don't see taking 2 minutes out of the day as much of a time commitment!)
+
+<a href="https://sketch.cloud/s/49qJo/9PQRRAP/play" target="_blank" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
+
+![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fbrighten%20artboards.png?1555224488955)
+
+## Bitchella concert (feat. lots of hype artists)
+
+_Prompt: Design something hype only using a shade of pale blue._
+
+There's nothing that says I can't use a transparent color! So using only white and overlays of #004980 at 25% alpha, I made a **HYPE** concert poster featuring **all of your favourite artists** from the Billboard Top 40 lists!
+
+![concert poster](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fconcert.png?1555223939824)
+
+## Treetop: Connecting kids in military families
+
+_Prompt: Design a low or high fidelity prototype to connect kids in military families who move around a lot._
+
+This one was designed specifically for kids to connect with other kids... "in military families who move around a lot." This app comes with a design that is kid-friendly, featuring colorful graphics, round corners, and large text. Features such as filtered chat and in-app games help keep kids engaged with each other. Additionally, there is a maps feature that displays countries where friends are currently located, which can be used as great conversation starters!
+
+Keeping in mind privacy and laws restricting the use of personally identifiable information from minors under 13, each kid only has their first name and last initial stored, with accounts that can be managed directly by parents.
+
+<a href="https://sketch.cloud/s/49qJo/oY2110Y/play" target="_blank" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
+
+![logo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Ftreetop.png?1555223856126)
+
+![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Ftreetop%20artboards.png?1555223894761)
+
+## BitPay app
+
+I worked with a team who had an idea of making bitcoin as seamless as Venmo, and as frictionless as cash. It even comes complete with the social aspect — each transaction allows you to attach a location for additional context.
+
+The rest of the left Bitcamp on Friday night never to seen again, and the only thing that got built was this protoype I spent hours working on. (Maybe it counts as an attempt to democratize financial services? Who knows!)
+
+<a href="https://sketch.cloud/s/49qJo/QbYjjv8/play" target="_blank" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
+
+![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fbitpay%20artboards.png?1555224619997)
+
+## Various mentorship
+
+I also helped even more along the way. Here are some of them below:
+
+I helped a team trying to do Twitter search for social issues brainstorm a basic user interface.
+
+![photo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fui brainstorm.png?1555226383748)
+
+I also worked on another team with adding color and typography to their mental health app.
+
+![photo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcolor improvements.png?1555226383470)
+
+Someone needed help with prettying up their command line application project, so I showed them the wonders of ASCII art!
+
+![photo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fascii art.png?1555226383529)
+
+A team needed last minute logo help, so I provided feedback that ultimated resulted in something like this (later renamed to PocDoc!)
+
+![photo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fpockdoc%20logo.png?1555226383672)
+
+Bonus pic: here's my setup for the weekend. Yes, I did carry a monitor all the way from Philly.
+
+![photo](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fbonus%3A my setup.png?1555226383938)
+
+---
+
+Additional credits: thank you to the people who run Bitcamp!
