🏙 clarify colorwar submission

--- a/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
+++ b/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
@@ -15,7 +15,20 @@ feature:
 image: meta-preview.png
 ---
 
-As part of Bitcamp 2019's Design Den, I designed a bunch of things and helped a bunch of people! Here's what I did over the past 36 hours:
+As part of Bitcamp 2019's Design Den, I designed a bunch of cool things and helped a bunch of cool people! This portfolio post showcases the work I have done over the past 30 hours.
+
+<div class="construction" markdown="block">
+**Table of Contents:**
+
+- [Colorwar submission](#colorwar-submission)
+- [Soothing FLAME RED lava lamp](#soothing-flame-red-lava-lamp)
+- [Bitstrict fresh & organic taco sauces](#bitstrict-fresh--organic-taco-sauces)
+- [Brighten: Improve your mood in 2 minutes!](#brighten-improve-your-mood-in-2-minutes)
+- [Bitchella concert (feat. lots of hype artists)](#bitchella-concert-feat-lots-of-hype-artists)
+- [Treetop: Connecting kids in military families](#treetop-connecting-kids-in-military-families)
+- [BitPay app](#bitpay-app-bitcoin-made-easy)
+- [Various mentorship](#various-mentorship)
+</div>
 
 ![things i made at bitcamp](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fhello.png?1555223303835)
 
@@ -23,7 +36,7 @@ As part of Bitcamp 2019's Design Den, I designed a bunch of things and helped a 
 
 _"Building with purpose"_ means bringing our unique skills to the table and working together as a team with to achieve a common goal! 🙌
 
-So I illustrated our (s)elves working on a cool website together!
+So I illustrated our (s)elves building a cool website together!! This is actually a somewhat accurate representation of what goes on in my brain when I make websites!
 
 <a href="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcolorwar.png?1555223309858" target="_blank" class="button uno"><img src="https://icon.now.sh/insert_photo" /> View Full Size →</a>
 
@@ -82,11 +95,11 @@ Keeping in mind privacy and laws restricting the use of personally identifiable 
 
 ![screens](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Ftreetop%20artboards.png?1555223894761)
 
-## BitPay app
+## BitPay app: Bitcoin made easy
 
 I worked with a team who had an idea of making bitcoin as seamless as Venmo, and as frictionless as cash. It even comes complete with the social aspect — each transaction allows you to attach a location for additional context.
 
-The rest of the left Bitcamp on Friday night never to seen again, and the only thing that got built was this protoype I spent hours working on. (Maybe it counts as an attempt to democratize financial services? Who knows!)
+The rest of my left Bitcamp on Friday night never to seen again, and the only thing that got built was this protoype I spent hours working on. (Maybe it counts as an attempt to democratize financial services? Who knows!)
 
 <a href="https://sketch.cloud/s/49qJo/QbYjjv8/play" target="_blank" class="button uno"><img src="https://icon.now.sh/phone_iphone" /> Launch Sketch Prototype →</a>
 
