im done good night

--- a/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
+++ b/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
@@ -26,7 +26,7 @@ As part of Bitcamp 2019's Design Den, I designed a bunch of cool things and help
 - [Brighten: Improve your mood in 2 minutes!](#brighten-improve-your-mood-in-2-minutes)
 - [Bitchella concert (feat. lots of hype artists)](#bitchella-concert-feat-lots-of-hype-artists)
 - [Treetop: Connecting kids in military families](#treetop-connecting-kids-in-military-families)
-- [BitPay app](#bitpay-app-bitcoin-made-easy)
+- [BitPay app: Bitcoin made easy](#bitpay-app-bitcoin-made-easy)
 - [Various mentorship](#various-mentorship)
 </div>
 
