Add more useful features

--- a/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
+++ b/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
@@ -1,5 +1,4 @@
 ---
-layout: post
 title: Bitcamp
 tags: hackathon
 accent: teal
@@ -13,6 +12,7 @@ feature:
   height: 10
   image: feature.png
 image: meta-preview.png
+hidden: true
 ---
 
 As part of Bitcamp 2019's Design Den, I designed a bunch of cool things and helped a bunch of cool people! This portfolio post showcases the work I have done over the past 30 hours.
