--- a/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
+++ b/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
@@ -1,9 +1,8 @@
 ---
 title: Bitcamp
-tags: hackathon
+tags: design hackathon
 accent: teal
 tile:
-  order: 101
   width: 6
   height: 6
   image: tile.png
