codeday graphics but also quotes

--- a/_posts/2018-05-31-codeday/2018-05-31-codeday.md
+++ b/_posts/2018-05-31-codeday/2018-05-31-codeday.md
@@ -25,18 +25,18 @@ To solve this problem, I started **CodeDay Philly** For 24 hours we invite stude
 Since the first event in Spring 2014, CodeDay has had a great impact on the Philadelphia community:
 
 <grid column-count="3" phone-column-count="1">
-	<div class="brick accent-bg">
+	<blockquote>
 		<h2>600+</h2>
 		<p class="lead">Students reached</p>
-	</div>
-	<div class="brick accent-bg">
+	</blockquote>
+	<blockquote>
 		<h2>200+</h2>
 		<p class="lead">Amazing projects</p>
-	</div>
-	<div class="brick accent-bg">
+	</blockquote>
+	<blockquote>
 		<h2>90+</h2>
 		<p class="lead">Hours of workshops</p>
-	</div>
+	</blockquote>
 </grid>
 
 ### Low Cost, High Return
@@ -49,17 +49,15 @@ Overall, 43% of our participants are girls, 38% are from Title I schools, and 21
 
 ## Photos
 
-TODO: import photos from old site
-
 <blockquote class="text-center">
 	<row>
-		<column class=""><img src="{{ site.baseurl }}/media/codeday/phl-f2014code.jpg" alt=""></column>
-		<column class=""><img src="{{ site.baseurl }}/media/codeday/phl-f2014kickoff.jpg" alt=""></column>
-		<column class=""><img src="{{ site.baseurl }}/media/codeday/phl-s2015selfie.jpg" alt=""></column>
+		<column class=""><img src="phl-f2014code.jpg" alt=""></column>
+		<column class=""><img src="phl-f2014kickoff.jpg" alt=""></column>
+		<column class=""><img src="phl-s2015selfie.jpg" alt=""></column>
 	</row>
 	<row>
-		<column class="no-margin-bottom"><img src="{{ site.baseurl }}/media/codeday/phl-f2017event.png" alt=""></column>
-		<column class="no-margin-bottom"><img src="{{ site.baseurl }}/media/codeday/phl-f2015mentors.jpg" alt=""></column>
+		<column class="no-margin-bottom"><img src="phl-f2017event.png" alt=""></column>
+		<column class="no-margin-bottom"><img src="phl-f2015mentors.jpg" alt=""></column>
 	</row>
 </blockquote>
 
@@ -67,15 +65,13 @@ TODO: import photos from old site
 
 I worked on some marketing material for CodeDay designed to be shared and re-shared on social media. Here's what it looks like:
 
-TODO: import graphics from old site
-
 <blockquote class="accent-light-bg text-center">
 	<row>
-		<column class="no-margin-bottom"><i>Announcement</i><img src="{{ site.baseurl }}/media/codeday/promo-back.png" alt=""></column>
-		<column class="no-margin-bottom"><i>Reminder</i><img src="{{ site.baseurl }}/media/codeday/promo-code.png" alt=""></column>
+		<column class="no-margin-bottom"><i>Announcement</i><img src="promo-back.png" alt=""></column>
+		<column class="no-margin-bottom"><i>Reminder</i><img src="promo-code.png" alt=""></column>
 	</row>
 	<row>
-		<column class="no-margin-bottom"><i>Promotion</i><img src="{{ site.baseurl }}/media/codeday/promo-poster.png" alt=""></column>
-		<column class="no-margin-bottom"><i>Sponsor</i><img src="{{ site.baseurl }}/media/codeday/promo-sponsor.png" alt=""></column>
+		<column class="no-margin-bottom"><i>Promotion</i><img src="promo-poster.png" alt=""></column>
+		<column class="no-margin-bottom"><i>Sponsor</i><img src="promo-sponsor.png" alt=""></column>
 	</row>
 </blockquote>
