unbreak my heart'

--- a/_posts/2018-05-31-codeday/2018-05-31-codeday.md
+++ b/_posts/2018-05-31-codeday/2018-05-31-codeday.md
@@ -26,15 +26,15 @@ Since the first event in Spring 2014, CodeDay has had a great impact on the Phil
 
 <grid column-count="3" phone-column-count="1">
 	<blockquote>
-		<h2>600+</h2>
+		<h2 class="no-margin-bottom">600+</h2>
 		<p class="lead">Students reached</p>
 	</blockquote>
 	<blockquote>
-		<h2>200+</h2>
+		<h2 class="no-margin-bottom">200+</h2>
 		<p class="lead">Amazing projects</p>
 	</blockquote>
 	<blockquote>
-		<h2>90+</h2>
+		<h2 class="no-margin-bottom">90+</h2>
 		<p class="lead">Hours of workshops</p>
 	</blockquote>
 </grid>
