--- a/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
+++ b/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
@@ -1,6 +1,6 @@
 ---
 title: lo-fi hip hop beats to npm install to
-tags: talks dev borojs
+tags: talks
 accent: purple
 tile:
   order: 9
@@ -13,5 +13,8 @@ feature:
   height: 10
   image: feature.png
 image: meta-preview.png
-draft: true
 ---
+
+Here's a talk I gave at BrooklynJS & Philly JS Meetup April 2019! The slides are below, I will post resources and other links in the very near future!
+
+<script async class="speakerdeck-embed" data-id="3fef9ae3ebac418eb2453244f81e5d58" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
