--- a/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
+++ b/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
@@ -15,6 +15,13 @@ feature:
 image: meta-preview.png
 ---
 
-Here's a talk I gave at BrooklynJS & Philly JS Meetup April 2019! The slides are below, I will post resources and other links in the very near future!
+Here's a talk I gave at **BrooklynJS & Philly JS Meetup April 2019** about generating music with package managers!
 
 <script async class="speakerdeck-embed" data-id="3fef9ae3ebac418eb2453244f81e5d58" data-ratio="1.77777777777778" src="//speakerdeck.com/assets/embed.js"></script>
+
+## Links from Slides
+
+- [node_modules zoom out clip in side](https://twitter.com/pixelyunicorn/status/1116445003138641926?s=20)
+- [node-red](https://nodered.org)
+- [node-red flow for outputting npm log to websocket](https://gist.github.com/pixelyunicorn/ca7c440518135e05d2cdf7f77385984e)
+- [tone.js](https://tonejs.github.io)
