update talks pages

--- a/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
+++ b/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
@@ -23,5 +23,13 @@ Here's a talk I gave at **BrooklynJS & Philly JS Meetup April 2019** about gener
 
 - [node_modules zoom out clip in side](https://twitter.com/pixelyunicorn/status/1116445003138641926?s=20)
 - [node-red](https://nodered.org)
-- [node-red flow for outputting npm log to websocket](https://gist.github.com/pixelyunicorn/ca7c440518135e05d2cdf7f77385984e)
+- [node-red flow for watching a directory for changes](https://gist.github.com/pixelyunicorn/eba3013d0bd861d08aa51fe9e23edd3d)
+  [![node-red flow for watching a directory for changes](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flofi-npm-node-red-watch-folder.png?1555685430684)](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flofi-npm-node-red-watch-folder.png?1555685430684)
+- [node-red flow for outputting npm log to a text file and websocket](https://gist.github.com/pixelyunicorn/ca7c440518135e05d2cdf7f77385984e)
+  [![node-red flow for outputting npm log to text file and websocket](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flofi-npm-node-red-output-to-ws.png?1555685194988)](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flofi-npm-node-red-output-to-ws.png?1555685194988)
 - [tone.js](https://tonejs.github.io)
+
+<!-- - [tone.js demo page]() -->
+<!-- - [tone.js output to websocket]() -->
+
+## Alt Text
