fix title quick

--- a/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
+++ b/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
@@ -1,5 +1,5 @@
 ---
-title: lo-fi hip hop beats to npm install to
+title: lofi hip hop beats to npm install to
 tags: talks dev borojs
 accent: purple
 tile:
