⚓️💣 Updated with Glitch

--- a/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
+++ b/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
@@ -22,7 +22,7 @@ Here's a talk I gave at **BrooklynJS & Philly JS Meetup April 2019** about gener
 ## Links from Slides
 
 - [slides on speakerdeck](https://speakerdeck.com/pixely/lo-fi-hip-hop-beats-to-npm-install-to)
-- [node_modules zoom out clip in side](https://twitter.com/pixelyunicorn/status/1116445003138641926?s=20)
+- [video of zooming out on node_modules folders](https://twitter.com/pixelyunicorn/status/1116445003138641926?s=20)
 - [node-red](https://nodered.org)
 - [node-red flow for watching a directory for changes](https://gist.github.com/pixelyunicorn/eba3013d0bd861d08aa51fe9e23edd3d)
   [![node-red flow for watching a directory for changes](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flofi-npm-node-red-watch-folder.png?1555685430684)](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flofi-npm-node-red-watch-folder.png?1555685430684)
