--- a/_posts/2019-03-04-splatoon/2019-03-04-splatoon.md
+++ b/_posts/2019-03-04-splatoon/2019-03-04-splatoon.md
@@ -16,6 +16,8 @@ image: meta-preview.png
 draft: true
 ---
 
+Splatoon is this really cool game I play that involves splatting other players with ink. I'm proud to be part of a friendly and community that's quite hard to come across, especially in esports.
+
 ## Outline
 
 - Intro to Splatoon
@@ -27,33 +29,34 @@ draft: true
   - Mixer overlay
 - Team history
   - GSQ
-  - Tuff Puff
+  - Tuff
   - HRG
-  - ??
-
-
-Splatoon is this really cool game I play that involves splatting other players with ink. I'm proud to be part of a friendly and community that's quite hard to come across, especially in esports.
+  - Fulton
 
 ## I'm on Twitch!
 
 I'm really just here to have a great time, so sit back, stay for a while, and send me some positive vibes! 👋
 
-TODO:
+<a class="uno button" href="https://twitch.tv/pixelysquid" target="_blank"><img src="https://icon.now.sh/twitch/6441a5" class="visible-theme-light" height="14" width="14" /><img src="https://icon.now.sh/twitch/b9a3e3" class="visible-theme-dark" height="14" width="14" /> Follow me on Twitch!</a>
 
 As part of my setup, I designed a digital graphics package for my stream.
 
-## Code experiments
+### Design System
 
-Yes!
+I worked on a design system for my streams, and additionally future tournaments I may or may not be putting together.
+
+<!-- (TODO: put repo on GitHub) -->
 
 ### Philips Hue integration
 
 At the beginning of each match, each team is randomly assigned a color. Using the power of OpenCV, I tossed together a python script that detects your team's color and changes the ambient lighting of the room to match that color!
 
+<!-- TODO: put python script on GitHub -->
+
 ### OBS Overlays
 
-I worked on an overlay for OBS that displays the current stages. (GitHub @pixelyunicorn/splat-overlay)
+I worked on an overlay for OBS that displays the current stages and modes. (GitHub @pixelyunicorn/splat-overlay)
 
 ### Mixer Overlay
 
-I am currently experimenting with Mixer's overlay system.
+I am currently experimenting with Mixer's overlay system and building an interactive overlay that allows viewers to see results before the appear on screen, and view previous matches.
