--- a/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
+++ b/_posts/2019-04-11-lofi-npm/2019-04-11-lofi-npm.md
@@ -50,7 +50,7 @@ It's me, Melody!
 
 Images: computer monitor emoji, art pallete emoji, unicorn emoji.
 
-I design and code websites, which I guess makes me a uniocnr!
+I design and code websites, which I guess makes me a unicorn!
 
 Images: taco emoji, tea emoji.
 
@@ -68,7 +68,7 @@ Listen to your computer. Chances are, you probably have a laptop in front of you
 
 Image: computer fans, from Wikipedia.
 
-You can probably (or imagine) hear the sounds of a laptop fans whizzing as accidentally leave too many tabs open.
+You can probably hear (or imagine) the sounds of laptop fans whizzing as accidentally leave too many tabs open.
 
 ### Slide 9
 
@@ -86,15 +86,15 @@ But so far, I have only described ways you can _physically_ listen to your compu
 
 ### Slide 11-12
 
-Images: screenshots of the Activity Monitor app in macOS, showing tne CPU and Network tabs.
+Images: screenshots of the Activity Monitor app in macOS, showing the CPU and Network tabs.
 
-There are ways you can also digitally listen to your computer. Most operating systems comes with an interface for a task manager, which allows you to take a peek into what's going on in your computer.
+There are ways you can also digitally listen to your computer. Most operating systems come with an interface for a task manager, which allows you to take a peek into what's going on in your computer.
 
 ### Slide 13
 
-Image: screenshot of the Activity Monitor app in macOS, zoomed into a graph showing network data sent and recieved.
+Image: a screenshot of the Activity Monitor app in macOS, zoomed into a graph showing network data sent and received.
 
-macOS's activity montitor even provides you with a graph. It honestly looks like something we can generate music from. (But that's another talk for another time!)
+macOS's activity monitor even provides you with a graph. It honestly looks like something we can generate music from. (But that's another talk for another time!)
 
 ### Slide 14
 
@@ -102,17 +102,17 @@ Image: logos of node.js and npm.
 
 What we'll be listening to today is a package manager called npm.
 
-For those of you not aware, node.js is a runtime that allows your to run javascirpt outside of the browser, and npm is a package manager for node.js.
+For those of you not aware, node.js is a runtime that allows you to run javascript outside of the browser, and npm is a package manager for node.js.
 
 ### Slide 15
 
 Image: a file browser, showing a visually very large node_modules folder. folder.
 
-If you have ever had the pleasure of dealing with npm before, you probably have encoutered a very large node_modules folder. And when I mean large, I mean large enough to take up 10% of my disk space!
+If you have ever had the pleasure of dealing with npm before, you probably have encountered a very large node_modules folder. And when I mean large, I mean large enough to take up 10% of my disk space!
 
 ### Slide 16
 
-Video: a file browser, showing a visually very large node_modules folder, then zooming out to reval many visually small node_modules folders, then scrolled down to reveal over 1,000 more node_modules folders. [Link to video.](https://twitter.com/pixelyunicorn/status/1116445003138641926?s=20).
+Video: a file browser, showing a visually very large node_modules folder, then zooming out to reveal many visually small node_modules folders, then scrolled down to reveal over 1,000 more node_modules folders. [Link to video.](https://twitter.com/pixelyunicorn/status/1116445003138641926?s=20).
 
 Of course, there isn't a single node_modules folder we're dealing with there. For a simple hello world application in react native, we're dealing with hundreds of node_modules folders. Did I say hundreds? I meant closer to well over one thousand.
 
@@ -120,11 +120,11 @@ Of course, there isn't a single node_modules folder we're dealing with there. Fo
 
 Image: a file browser, showing the contents of a single node_modules folder.
 
-Why does this happen? Well, a project may have a couple of dependencies, but each of these individual dependencies may have a couple more dependencies, and so forth. It downloads everything recursvely! That gives us a treasure trove of activity we can monitor and generate music with!
+Why does this happen? Well, a project may have a couple of dependencies, but each of these individual dependencies may have a couple more dependencies, and so forth. It downloads everything recursively! That gives us a treasure trove of activity we can monitor and generate music with!
 
 ### Slide 18
 
-Let's see now installing a package with npm works.
+Let's see how installing a package with npm works.
 
 Demo: `npm install express` command.
 
@@ -144,7 +144,7 @@ This provides us with more lines to work with than my terminal history can store
 
 ### Slides 19-20
 
-[node-red](https://nodered.org) is a pacakge that was originally desinged for programming internet of things devices, like light bulbs, voice assistants, and nest thermostats. Because I am the type of person who likes to use things outside of their intended purposes, I found a way to use node-red to. Let me show you how this works!
+[node-red](https://nodered.org) is a package that was originally designed for programming internet of things devices, like light bulbs, voice assistants, and nest thermostats. Because I am the type of person who likes to use things outside of their intended purposes, I found a way to use node-red to. Let me show you how this works!
 
 Demo: running the `node-red` command to start the server.
 
@@ -166,13 +166,13 @@ Scrolling thru the file we just generated, we have 29,839 lines of logs we can w
 
 ### Slides 21-22
 
-We're going to use [tone.js](https://tonejs.github.io) to geneate our music.
+We're going to use [tone.js](https://tonejs.github.io) to generate our music.
 
 Demo: open tone.js website and show how with just a few lines of code, you can generate or play a certain tone.
 
 ### Slide 23
 
-Chances are, if you have been on YouTube in the past year, you probably heard of lofi hip hop beats (to study and relax to.) But in case you're not too familiar: [here's a BuzzFeed article about how it's everywhere!](Lo-Fi Hip-Hop Is Everywhere And Meaningless https://www.buzzfeednews.com/article/krishrach/these-musicians-are-bringing-meaning-back-to-lo-fi)
+Chances are if you have been on YouTube in the past year, you probably heard of lofi hip hop beats (to study and relax to.) But in case you're not too familiar: [here's a BuzzFeed article about how it's everywhere!](https://www.buzzfeednews.com/article/krishrach/these-musicians-are-bringing-meaning-back-to-lo-fi)
 
 So let's make some lofi music!
 
@@ -182,7 +182,7 @@ Here is where we tie it all together! We can create a switch split up different 
 
 [![node-red flow for outputting npm log to text file and websocket](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flofi-npm-node-red-output-to-ws.png?1555685194988)](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flofi-npm-node-red-output-to-ws.png?1555685194988)
 
-I also created a webpage to recieve these websocket output frames and match each of these keywords with a note!
+I also created a webpage to receive these websocket output frames and match each of these keywords with a note!
 
 <a href="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flofi-npm-ws-light.png?1555692963439"><img src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flofi-npm-ws-light.png?1555692963439" class="visible-theme-light"/></a><a href="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flofi-npm-ws-dark.png?1555692963439"><img src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Flofi-npm-ws-dark.png?1555692963439" class="visible-theme-dark"/></a>
 
@@ -202,7 +202,7 @@ If I had more time, I could show you how to add visualizations by hooking into t
 
 ### Slide 26
 
-Image: screenshot of my website, showing colorful tiles arranged in an irregular grid layout.
+Image: a screenshot of my website, showing colorful tiles arranged in an irregular grid layout.
 
 Thank you! You can find my website and the slides at [melody.dev](https://melody.dev).
 
