--- a/_posts/2018-05-31-codeday/2018-05-31-codeday.md
+++ b/_posts/2018-05-31-codeday/2018-05-31-codeday.md
@@ -50,6 +50,7 @@ Overall, 43% of our participants are girls, 38% are from Title I schools, and 21
 ## Photos
 
 <blockquote class="text-center">
+  <br>
 	<row>
 		<column class=""><img src="phl-f2014code.jpg" alt=""></column>
 		<column class=""><img src="phl-f2014kickoff.jpg" alt=""></column>
@@ -65,7 +66,8 @@ Overall, 43% of our participants are girls, 38% are from Title I schools, and 21
 
 I worked on some marketing material for CodeDay designed to be shared and re-shared on social media. Here's what it looks like:
 
-<blockquote class="accent-light-bg text-center">
+<blockquote class="text-center">
+  <br>
 	<row>
 		<column class="no-margin-bottom"><i>Announcement</i><img src="promo-back.png" alt=""></column>
 		<column class="no-margin-bottom"><i>Reminder</i><img src="promo-code.png" alt=""></column>
