🎁🗾 Updated with Glitch

--- a/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
+++ b/_posts/2019-04-12-bitcamp/2019-04-12-bitcamp.md
@@ -16,18 +16,16 @@ hidden: true
 
 As part of Bitcamp 2019's Design Den, I designed a bunch of cool things and helped a bunch of cool people! This portfolio post showcases the work I have done over the past 30 hours.
 
-<div class="construction" markdown="block">
-**Table of Contents:**
-
-- [Colorwar submission](#colorwar-submission)
-- [Soothing FLAME RED lava lamp](#soothing-flame-red-lava-lamp)
-- [Bitstrict fresh & organic taco sauces](#bitstrict-fresh--organic-taco-sauces)
-- [Brighten: Improve your mood in 2 minutes!](#brighten-improve-your-mood-in-2-minutes)
-- [Bitchella concert (feat. lots of hype artists)](#bitchella-concert-feat-lots-of-hype-artists)
-- [Treetop: Connecting kids in military families](#treetop-connecting-kids-in-military-families)
-- [BitPay app: Bitcoin made easy](#bitpay-app-bitcoin-made-easy)
-- [Various mentorship](#various-mentorship)
-</div>
+> **Table of Contents:**
+> 
+> - [Colorwar submission](#colorwar-submission)
+> - [Soothing FLAME RED lava lamp](#soothing-flame-red-lava-lamp)
+> - [Bitstrict fresh & organic taco sauces](#bitstrict-fresh--organic-taco-sauces)
+> - [Brighten: Improve your mood in 2 minutes!](#brighten-improve-your-mood-in-2-minutes)
+> - [Bitchella concert (feat. lots of hype artists)](#bitchella-concert-feat-lots-of-hype-artists)
+> - [Treetop: Connecting kids in military families](#treetop-connecting-kids-in-military-families)
+> - [BitPay app: Bitcoin made easy](#bitpay-app-bitcoin-made-easy)
+> - [Various mentorship](#various-mentorship)
 
 ![things i made at bitcamp](https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fhello.png?1555223303835)
 
