--- a/_posts/2018-05-31-codeday/2018-05-31-codeday.md
+++ b/_posts/2018-05-31-codeday/2018-05-31-codeday.md
@@ -12,6 +12,7 @@ feature:
   height: 10
   image: feature.png
 image: meta-preview.png
+hidden: true
 ---
 
 Coding, programming, and computer analytics don’t seem like very sexy careers. Having Applications Software Developer etched in the nameplate on your desk? Perhaps even less so. But did you know that developers and programmers are among the highest paid members of the workforce, right out of college?
