more organic looking grid

--- a/_posts/2018-11-08-ie6/2018-11-08-ie6.md
+++ b/_posts/2018-11-08-ie6/2018-11-08-ie6.md
@@ -1,15 +1,15 @@
 ---
-title: Modern Web Development on IE6
+title: Modern Web Dev on IE6
 tags: talks dev borojs
 accent: blue
 tile:
   order: 10
-  width: 6
-  height: 6
+  width: 5
+  height: 5
   image: tile.png
 feature:
-  width: 18
-  height: 10
+  width: 17
+  height: 9
   image: feature.png
 image: meta-preview.png
 ---
