move codeday pics to cdn

--- a/_posts/2018-05-31-codeday/2018-05-31-codeday.md
+++ b/_posts/2018-05-31-codeday/2018-05-31-codeday.md
@@ -53,13 +53,13 @@ Overall, 43% of our participants are girls, 38% are from Title I schools, and 21
 <blockquote class="text-center">
   <br>
 	<row>
-		<column class=""><img src="phl-f2014code.jpg" alt=""></column>
-		<column class=""><img src="phl-f2014kickoff.jpg" alt=""></column>
-		<column class=""><img src="phl-s2015selfie.jpg" alt=""></column>
+		<column class=""><img src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcodeday-phl-f2014code.jpg" alt=""></column>
+		<column class=""><img src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcodeday-phl-f2014kickoff.jpg" alt=""></column>
+		<column class=""><img src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcodeday-phl-s2015selfie.jpg" alt=""></column>
 	</row>
 	<row>
-		<column class="no-margin-bottom"><img src="phl-f2017event.png" alt=""></column>
-		<column class="no-margin-bottom"><img src="phl-f2015mentors.jpg" alt=""></column>
+		<column class="no-margin-bottom"><img src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcodeday-phl-f2017event.png" alt=""></column>
+		<column class="no-margin-bottom"><img src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcodeday-phl-f2015mentors.jpg" alt=""></column>
 	</row>
 </blockquote>
 
@@ -70,11 +70,11 @@ I worked on some marketing material for CodeDay designed to be shared and re-sha
 <blockquote class="text-center">
   <br>
 	<row>
-		<column class="no-margin-bottom"><i>Announcement</i><img src="promo-back.png" alt=""></column>
-		<column class="no-margin-bottom"><i>Reminder</i><img src="promo-code.png" alt=""></column>
+		<column class="no-margin-bottom"><i>Announcement</i><img src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcodeday-promo-back.png" alt=""></column>
+		<column class="no-margin-bottom"><i>Reminder</i><img src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcodeday-promo-code.png" alt=""></column>
 	</row>
 	<row>
-		<column class="no-margin-bottom"><i>Promotion</i><img src="promo-poster.png" alt=""></column>
-		<column class="no-margin-bottom"><i>Sponsor</i><img src="promo-sponsor.png" alt=""></column>
+		<column class="no-margin-bottom"><i>Promotion</i><img src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcodeday-promo-poster.png" alt=""></column>
+		<column class="no-margin-bottom"><i>Sponsor</i><img src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218%2Fcodeday-promo-sponsor.png" alt=""></column>
 	</row>
 </blockquote>
