master planning here

--- a/_posts/events/2019-04-21-events.md
+++ b/_posts/events/2019-04-21-events.md
@@ -35,6 +35,7 @@ Here is a (non-exhaustive) list of topics I am planning to speak about in 2019!
 - [lofi hip hop beats to npm install to](/lofi-npm)
 - Making Music with React
 - An Absurd Intro to React Hooks
+- An Absurd Intro to React Hooks (pony edition)
 
 ### CSS
 
